--- a/.gitattributes
+++ b/.gitattributes
@@ -21,4 +21,4 @@
 *.3ds filter=lfs diff=lfs merge=lfs -text
 *.dae filter=lfs diff=lfs merge=lfs -text
 # Raw content directory
-/TalesOfTheHollow/Content/** filter=lfs diff=lfs merge=lfs -text
+/EndlessMaw/Content/** filter=lfs diff=lfs merge=lfs -text
